--- a/vowmeapp/src/app/html/app.component.html
+++ b/vowmeapp/src/app/html/app.component.html
@@ -1,14 +1,14 @@
 <section class="todoapp">
   <header class="header">
     <h1>Events</h1>
-    <input class="new-Event" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newEvent.title" (keyup.enter)="addEvent()">
+    <input class="new-Event" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newEvent.name" (keyup.enter)="addEvent()">
   </header>
-  <section class="main" *ngIf="events.length > 0">
+   <section class="main" *ngIf="events.length > 0">
     <ul class="event-list">
       <li *ngFor="let event of events" [class.completed]="event.complete">
         <div class="view">
           <input class="toggle" type="checkbox" (click)="toggleTodoComplete(event)" [checked]="event.complete">
-          <label>{{event.title}}</label>
+          <label>{{event.name}}</label>
           <button class="destroy" (click)="removeEvent(event)"></button>
         </div>
       </li>
